# VideoClipEditViewTest

./: README.md  build.gradle  settings.gradle
epf/: CMakeLists.txt  build.gradle
epf/src/androidTest/java/com/daasuu/epf/: ExampleInstrumentedTest.java
epf/src/main/: AndroidManifest.xml
epf/src/main/java/com/daasuu/epf/: EFrameBufferObjectRenderer.java  EFramebufferObject.java  EPlayerRenderer.java  EPlayerView.java  ESurfaceTexture.java  EglUtil.java  GlPlayerView.java  GlPlayerView.kt  TextureSurfaceFBORenderer.java  VideoTextureSurfaceRenderer2.java
epf/src/main/java/com/daasuu/epf/custfilter/: GLImageAmaroFilter.java  GLImageBeautyHighPassFilter.java  GLImageBlackWhiteFilter.java  GLImageGaussPassFilter.java  Gl4SplitFilter.java  GlBeautyBlurFilter.java  GlBeautyFilter.java  GlBeautyGroupFilter.java  GlFlashFliter.java  GlHuanJueFliter.java  GlItchFilter.java  GlPngFliter.java  GlScaleFilter.java  GlShakeFilter.java  GlSoulOutFilter.java
epf/src/main/java/com/daasuu/epf/filter/: FilterType.java  GlFilter.java  GlFilterGroup.java  GlFilterList.java  GlFilterPeriod.java  GlMonochromeFilter.java  GlOverlayFilter.java  GlPreviewFilter.java  GlVignetteFilter.java
epf/src/main/java/com/spx/egl/: DecoderOutputSurface.java  DecoderSurface.java  DecoderSurface2.java  EncoderSurface.java  GLImageComplexionBeautyFilter.java  GlFilterConfig.java  GlFilterList.java  GlFilterPeriod.java  MPlayerView.java  MagicJni.java  Resolution.java  VideoProcessConfig.java
epf/src/main/jni/: MagicJni.cpp
epf/src/test/java/com/daasuu/epf/: ExampleUnitTest.java
(+119 files in other folders)
